fix alefba & harf sample section size & spacing issues

--- a/src/alefba-src/src/stylesheets/sample-section.scss
+++ b/src/alefba-src/src/stylesheets/sample-section.scss
@@ -5,7 +5,6 @@ p {
 .button {
     background-color: transparent;
     border-color: transparent;
-    width: 20vw;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -21,20 +20,16 @@ p {
 }
 
 .sample-row {
-    margin-right: -2vw;
     display: flex;
-    height: 3vh;
     justify-content: flex-end;
     align-items: center;
     flex-direction: row;
 }
 
 #buttons {
-    height: 19vw;
-    margin-top: 2vw;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
 }
 
@@ -182,6 +177,7 @@ p {
 
     #buttons {
         justify-content: center;
+        height: 19vw;
     }
 
     .sample {
