--- a/src/harf-src/src/stylesheets/sample-section.scss
+++ b/src/harf-src/src/stylesheets/sample-section.scss
@@ -31,7 +31,6 @@ p {
 }
 
 #buttons {
-    margin-top: 2vw;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
